# Project2025

./: README.md  pyproject.toml
app/: app.py  llm_wrapper.py  requirements.txt  retriever.py  student_prompt.py  utils.py
data/: hse_all_projects.json  hse_students_combined_50.json  student_project_manual_matching_top20.json
experiments/: ALS.ipynb  LLM's_embeds_+_RS.ipynb  LLM_as_Rec.ipynb
